# ADDoc

./: .gitignore  DEPLOY_NAS.md  README.md  nginx.conf  package-lock.json  package.json  package.ps1  package_for_nas.bat
addoc_deploy/: docker-compose.yml
addoc_deploy/backend/: Dockerfile  addoc.db  auth_utils.py  database.py  main.py  models.py
addoc_deploy/backend/routers/: activity.py  auth.py  backup.py  docs.py  search.py  stats.py  upload.py  users.py
backend/: addoc.db  database.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  restore_admin.py  schemas.py
backend/data/: addoc.db
backend/routers/: auth.py  backup.py  docs.py  search.py  stats.py  structure.py  upload.py
backend/utils/: logger.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  vite-env.d.ts
frontend/src/api/: activity.ts  request.ts
frontend/src/components/: NavBar.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
frontend/src/views/: AdminView.vue  DocView.vue  EditorView.vue  HomeView.vue  KnowledgeView.vue  LoginView.vue  SearchView.vue
